<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InMyHand</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="fondo">fondo de la aplicación</string>
    <string name="estadisticas">imagen para las estadisticas</string>
    <string name="productos">imagen de productos</string>
    <string name="promociones">imagen para las promociones</string>
    <string name="ventas">imagen para las ventas</string>
    <string name="labelAgregarProducto">Nombre: </string>
    <string name="title_activity_carrito_de_venta">Carrito de Venta</string>
    <string name="Editar">Editar</string>
    <string name="Eliminar">Eliminar</string>
    <string name="title_activity_list">Lista de Productos</string>
    <string name="title_activity_agregar_producto">Agregar Producto</string>
    <string name="title_activity_historial_ventas">Historial de Ventas</string>


    <!--Agregar producto-->
    <string name="nombre_item">Nombre: </string>
    <string name="titulo_agregar_item">Agregar Gasto</string>
    <string name="posicion">Posición: </string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="agregar_item_gasto">Agregar Item</string>
    <string name="cerrar_detalle">Cerrar</string>
    <string name="tittle_detalle_gasto">Detalle</string>
    <string name="title_activity_agregar_item_gasto">AgregarItemGasto</string>
    <string name="titulo_agregar_item_gasto">Agregar Item</string>
    <string name="valor">Valor:</string>


</resources>
